# epistasis-budget

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md  bench_35m.json  bench_650m.json  calibration_35m.json  calibration_650m.json  claim_map.json  dataset_gb1.json  headline_650m.json  manifest.json  robustness_650m.json  signal_650m.json  smoke_recovery_35m.json  structural_allocation_650m.json  supplementary_recovery_650m.json
docs/: LIMITATIONS.md  PRIOR_ART.md  RESEARCH_EPISTASIS.md  RND_RECORD.md  SIGNAL_GATE.md  SPEC.md  STEP1_GATE.md  VALIDATION.md  headline_650m_colab.md
docs/experiments/: trpb-650m-n16-20260723.md  trpb-downstream-generalization-20260716.md  trpb-exploratory-plan.md  trpb-smoke-20260713.md
docs/specs/: README.md  downstream.md  gate3-correlated-inference.md  robustness.md  step6-coefficient-recovery.md  trpb-exploratory.md
notebooks/: README.md
notebooks/colab/: gb1_650m_n16.ipynb  trpb_650m_n0.ipynb
scripts/: _console.py  bench_scoring.py  build_public_artifacts.py  calibrate_uncertainty.py  explore_trpb.py  fetch_gb1.py  fetch_trpb.py  gb1_epistasis_signal.py  headline_650m_supplementary.py  spike_gb1_epistasis.py  validate_artifacts.py
scripts/hooks/: pre-commit
src/epibudget/: __init__.py  acquisition.py  artifacts.py  calibrate.py  cli.py  coeff_recovery.py  data.py  downstream.py  epistasis.py  gate2.py  gate3.py  graph.py  provenance.py  robustness.py  scored_cache.py  scoring.py  scoring_plan.py  trpb_explore.py  types.py  validate.py
tests/: test_acquisition.py  test_artifacts.py  test_build_public_artifacts.py  test_calibrate.py  test_cli.py  test_coeff_recovery.py  test_data.py  test_downstream.py  test_epistasis.py  test_gate2.py  test_gate3.py  test_graph.py  test_pre_commit_hook.py  test_provenance.py  test_robustness.py  test_scored_cache.py  test_scoring.py  test_scoring_plan.py  test_script_help.py  test_trpb_explore.py  test_validate.py
